--- a/catalog/templates/catalog/home.html
+++ b/catalog/templates/catalog/home.html
@@ -13,6 +13,7 @@
     <nav class="ms-5">
         <a class="p-2 btn btn-outline-primary" href="/">Каталог</a>
         <a class="p-2 btn btn-outline-primary" href="/contacts/">Контакты</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'blog:list' %}">Блог</a>
     </nav>
 </div>
 
@@ -41,7 +42,7 @@
             <div class="col-6 col-md">
                 <h5>Дополнительно</h5>
                 <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Мы пишем</a></li>
+                    <li><a class="text-muted" href="{% url 'blog:list' %}">Блог</a></li>
                 </ul>
             </div>
             <div class="col-6 col-md">
