--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -21,20 +21,12 @@
                             <td>{{ object.category }}</td>
                         </tr>
                         <tr>
-                            <td class="w-25">Дата создания:</td>
-                            <td>{{ object.date_of_add }}</td>
-                        </tr>
-                        <tr>
-                            <td class="w-25">Описание товара:</td>
-                            <td>{{ object.description }}</td>
-                        </tr>
-                        <tr>
                             <td class="w-25">Цена:</td>
                             <td><b>{{ object.price }} руб.</b></td>
                         </tr>
                     </table>
 
-                    <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
+                    <a class="btn btn-primary">Карточка товара</a>
                 </div>
             </div>
         </div>
